<resources>
  <string name="app_name">RetfofitAndRoom</string>
  <string name="hint_edit_city">Enter a city name</string>
  <string name="ok">ok</string>
  <string name="tem_d">Tem.: %d</string>
  <string name="hum_d">Hum.: %d</string>
  <string name="press_d">Press.: %d</string>
  <string name="empty">The city name field is empty</string>
  <string name="response_is_empty">The server response body is empty</string>
</resources>
